doc app icon, doc app name, project name changed

--- a/doc/src/main/res/values/strings.xml
+++ b/doc/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Doc</string>
+    <string name="app_name">Care Online Doctor</string>
 
     <string-array name="gender">
         <item>Gender</item>
